--- a/dinosaur-game.html
+++ b/dinosaur-game.html
@@ -31,7 +31,7 @@
             setInterval(change_image,200)
             function change_image(){
                 console.log(document.getElementById("dino").src)
-                
+                console.log(in_air)
                 if(in_air=0){
                 
 
