--- a/dinosaur-game.html
+++ b/dinosaur-game.html
@@ -32,7 +32,7 @@
             function change_image(){
                 console.log(document.getElementById("dino").src)
                 console.log(in_air)
-                if(in_air=0){
+                if(in_air==0){
                 
 
 
