--- a/dinosaur-game.html
+++ b/dinosaur-game.html
@@ -23,6 +23,7 @@
                         document.getElementById("dino").style.transform = `translate(350px, ${x}px)`;
                     }, i*10); 
                 }
+                in_air=0
                 
             }
                  
