added function to start running again

--- a/dinosaur-game.html
+++ b/dinosaur-game.html
@@ -23,7 +23,9 @@
                         document.getElementById("dino").style.transform = `translate(350px, ${x}px)`;
                     }, i*10); 
                 }
-                in_air=0
+                setTimeout(()=>{
+                        in_air=0
+                },2500)
                 
             }
                  
